# OopExam

./: CMakeLists.txt  Theory.MD  main.cpp
.github/workflows/: build_cmake.yml
counter/: SimpleSubsequenceCounter.cpp  SimpleSubsequenceCounter.h  SubsequenceCounter.h
test/: tests.cpp
